--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "plop": "plop"
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
     "next": "latest",
+    "plop": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "8.1.0"
   },
   "devDependencies": {
@@ -18,6 +21,7 @@
     "@types/react-dom": "18.2.5",
     "@types/redux-logger": "3.0.9",
     "redux-logger": "3.0.6",
+    "sass": "^1.69.5",
     "typescript": "5.1.3"
   }
 }
