--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
+    "@tanstack/react-query": "^5.14.0",
     "next": "latest",
     "plop": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
     "react-redux": "8.1.0"
   },
   "devDependencies": {
